--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,2 +1,4 @@
 body
-  background-color: red
+  background-color: cornflowerblue
+  background: url('../assets/images/angular.png')
+  background-size: cover
