--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,4 +1,4 @@
 body
   background-color: cornflowerblue
-  background: url('../assets/images/angular.png')
+  // background: url('../assets/images/angular.png')
   background-size: cover
