--- a/app/src/components/home/home.component.html
+++ b/app/src/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1>{{title}}</h1>
-  <img src={{assets.bgImage}} />
+  <img src="{{assets.image}}" />
   <a [routerLink]="['about']">About</a>
 </div>
