--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,4 +1,5 @@
 body
   background-color: cornflowerblue
-  // background: url('../assets/images/angular.png')
-  // background-size: cover
+  display: flex
+  flex-direction: column
+  align-content: stretch
