--- a/css/app.71523b.css
+++ b/css/app.71523b.css
@@ -10,4 +10,4 @@ body {
   -ms-flex-line-pack: stretch;
       align-content: stretch; }
 
-/*# sourceMappingURL=app.6ca6c0.css.map*/
+/*# sourceMappingURL=app.71523b.css.map*/
